# Ghostlink

./: .env  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.ghostlink  GHOSTLINK_COMPLETE_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIVE_NETWORKING_INTEGRATION.md  README.md  TESTING.md  VERIFICATION.md  VERIFICATION_REPORT.md  docker-compose.test-fabric.yml  ghostlink.example.toml  package-lock.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: production_phase_task.yml
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  hf-model-verify.yml  lint.yml  markdownlint.yml  production-gate.yml  release-artifacts.yml  security.yml  tests.yml
benches/: baseline.rs  criterion.rs  tensor_streaming_fabric.rs
crates/ghost-link/: Cargo.toml
crates/ghost-link/src/: main.rs  main_live_wiring.rs
crates/ghostlink-core/: Cargo.toml
crates/ghostlink-core/src/: accelerator.rs  cluster.rs  cluster_loop.rs  dashboard.rs  discovery.rs  health.rs  host.rs  kv_cache.rs  lib.rs  load_balance.rs  planning.rs  protocol.rs  ring.rs  runtime.rs  token_pipeline.rs  token_pipeline_complete.rs  xdp.rs
crates/ghostlink-core/tests/: common.rs  integration.rs
crates/ghostlink-gui/: README.md
crates/ghostlink-gui/frontend/: index.html  package.json
crates/ghostlink-gui/frontend/src/: App.svelte  main.js  styles.css
crates/ghostlink-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ghostlink-gui/src-tauri/src/: main.rs
crates/mohawk-engine/: Cargo.toml
crates/mohawk-engine/src/: api.rs  engine.rs  lib.rs  main.rs  metrics.rs  session.rs  worker.rs
crates/mohawk-gui/: Cargo.toml
crates/mohawk-gui/src/: main.rs
deploy/docker/: docker-compose.local.yml
deploy/systemd/: ghost-link-listener@.service
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EXAMPLES.md  GHOSTLINK_STUDIO_EXECUTION_PLAN.md  GHOSTLINK_STUDIO_PRODUCT_VISION.md  INDEX.md  MOHAWK_GUI.md  PERF_BASELINE.json  PERF_BASELINE_STRESS.json  PRODUCTION_ISSUE_SEEDS.md  PRODUCTION_PHASE_TRACKER.md  PRODUCTION_READINESS.md  PRODUCTION_REMEDIATION_PLAN.md  QUICKSTART.md  SECURITY_MODEL.md  SECURITY_SECRETS_REMEDIATION.md  TROUBLESHOOTING.md
docs/archive/: FINAL_IMPROVEMENTS_SUMMARY.md  INDEX.md  MODEL_CHAT_USAGE_IMPROVEMENTS.md  PRODUCTION_WIRING_STATUS.md  VERIFICATION.md
docs/archive/stale-rust-sources/: target_kv_cache.rs  target_sliding_window_attn.rs
integration/: __init__.py  cli.py  engine.py  pyproject.toml  server.py  setup.py
integration/api/: __init__.py  server.py
integration/gui/: __init__.py  app.py
integration/gui/components/: __init__.py  chat_interface.py  metrics_dashboard.py  model_manager.py  parameter_panel.py  settings_panel.py
integration/gui/styles/: __init__.py  theme.py
integration/gui/utils/: __init__.py  state_manager.py  websocket_handler.py
integration/models/: __init__.py  loader.py
integration/mohawk_sdk/: __init__.py  client.py  config.py  metrics.py  session.py  utils.py
integration/utils/: __init__.py  config.py  logging_config.py
scripts/: active_network_probe.py  analyze_flow_stage_metrics.py  check_license_consistency.sh  check_perf_drift.py  fault_injection_matrix.py  flow_perf_snapshot.py  launch_studio.sh  perf_maturity_profile.py  quickstart.sh  release_bundle.sh  run_all_tests.sh  run_full_validation.sh  run_gui_real_stack.sh  setup_full_test_env.sh  smoke_validate_production_gate_verdict.sh  summarize_active_probe.py  summarize_criterion_report.py  summarize_doctor_report.py  summarize_gui_dashboard_smoke.py  summarize_gui_diagnostics.py  summarize_production_gate.py  test_live_networking.sh  validate_doctor_context.py  validate_flow_canary.py  validate_flow_metrics.py  validate_flow_metrics_schema_contract.py  validate_gui_api_contract.py  validate_gui_diagnostics.py  validate_gui_python_config.py  validate_production_gate_verdict.py  validate_stage_tail_metrics.py  verify_hf_models.py  xdp_preflight_check.py
scripts/testdata/production_gate_verdict/: invalid_status_verdict.json  missing_domain_verdict.json  valid_verdict.json
tests/: common.rs  integration.rs
tmp/perf_snapshot/: inmem-1.json  inmem-2.json  inmem-3.json  inmem-4.json  inmem-5.json  summary.json  tcp-1.json  tcp-2.json  tcp-3.json  tcp-4.json  tcp-5.json
