[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mohawk-inference-engine-gui"
version = "2.1.0"
description = "Production-ready GUI for Mohawk Inference Engine with multi-device inference management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mohawk Inference Engine Team", email = "team@mohawk-inference.example.com"}
]
keywords = ["inference", "gpu", "ml", "distributed", "gui"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PyQt6>=6.5.0",
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
    "psutil>=5.9.0",
    "websockets>=11.0",
    "pyqtgraph>=0.13.0",
    "tomli>=2.0.1",
    "pydantic>=2.5.0",
    "httpx>=0.24.0",
    "aiohttp>=3.9.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
web-gui = [
    "gradio>=4.0.0",
    "plotly>=5.18.0",
    "psutil>=5.9.0",
    "websockets>=12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-qt>=4.2.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
]

[project.scripts]
mohawk-gui = "mohawk_gui.main:main"
mohawk-web-gui = "mohawk.gui.app:main"

[tool.setuptools.packages.find]
include = ["mohawk_gui*", "mohawk*"]

[tool.setuptools.package-data]
mohawk_gui = ["resources/**/*", "*.toml", "*.conf"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "crypto: marks tests as cryptography tests",
]
testpaths = ["prototype", "tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
