name = "ghost-limk"
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["Ryan K Williams"]
description = "High-performance, low-level network fabric utilizing zero-copy SPSC buffers and AF_XDP kernel bypass."
repository = "https://github.com/rwilliamspbg-ops/Ghostlink"
readme = "../../README.md"
license = "Apache-2.0" # Change to your preferred license
keywords = ["networking", "xdp", "zero-copy", "async"]
categories = ["asynchronous", "network-programming"]

[dependencies]
ghostlink-core = { path = "../ghostlink-core" }

# Production error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
