[package]
name = "ghost-link"
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["Ryan K Williams"]
description = "High-performance, low-level network fabric utilizing zero-copy SPSC buffers and AF_XDP kernel bypass."
repository = "https://github.com/rwilliamspbg-ops/Ghostlink"
readme = "../../README.md"
license = "MIT"
keywords = ["networking", "xdp", "zero-copy", "async"]
categories = ["asynchronous", "network-programming"]

[dependencies]
ghostlink-core = { path = "../ghostlink-core", version = "0.1.0-alpha.0" }

# Production error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# API Server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
