[package]
name = "ghostlink-core"
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["Ryan K Williams"]
description = "High-performance, low-level network fabric utilizing zero-copy SPSC buffers and AF_XDP kernel bypass."
repository = "https://github.com/rwilliamspbg-ops/Ghostlink"
readme = "README.md"
license = "Apache-2.0" # Change to your preferred license
keywords = ["networking", "xdp", "zero-copy", "async"]
categories = ["asynchronous", "network-programming"]

[dependencies]
# Zero-copy pinned allocations
pin-utils = "0.1"

# Fast CRC32 checksums
crc32fast = "1.5"

# Error types
thiserror = "2"

# Async runtime (for health monitoring)
tokio = { version = "1", features = ["full"] }

# Terminal UI
ratatui = "0.28"

# Production error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.10.1"
libc = "0.2.186"
crossterm = "0.29.0"
arc-swap = "1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "baseline"
path = "../../benches/baseline.rs"
harness = false

[[bench]]
name = "criterion"
path = "../../benches/criterion.rs"
harness = false
