[package]
name = "mohawk-gui"
version = "0.1.0"
edition = "2021"
authors = ["Ryan K Williams"]
description = "Mohawk GUI Dashboard - Real-time monitoring for distributed inference"
license = "MIT"

[dependencies]
# Core engine
mohawk-engine = { path = "../mohawk-engine" }
ghostlink-core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Terminal UI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for API
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "mohawk-gui"
path = "src/main.rs"
