[package]
name = "ghostlink-gui-tauri"
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
description = "Ghostlink Studio desktop shell"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
